updated descriptions and pcpartpicker lists

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="row justify-content-center">
             <div class="title col-12 col-md-8">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2"><strong>Welcome to DiriyePCMadeEz</strong></h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Hello this is a website made for the sole purpose of sharing my personal recommendations on desktops and laptops.</h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Hello this is a website made for the sole purpose of sharing my personal recommendations on desktops and laptops. Keep note that these are generic lists if you have specific requirements feel free to contact us via email :).</h4>
                 
             </div>
         </div>
@@ -100,7 +100,7 @@
                                 </div>
                                 <div class="col-12 col-lg-10">
                                     <div class="bottom-line">
-                                        <p class="mbr-text mbr-fonts-style m-0 display-7">Why Custom? <br>* Future Proof<br>* Upgrade-able<br>* Easy to repair<br><br>Links:&nbsp;<br><strong>Entry-Level</strong>:&nbsp;<a href="https://pcpartpicker.com/list/ZDFQCL" class="text-primary" target="_blank">https://bit.ly/33HFpsq</a><br><strong>Mid-Level</strong>:&nbsp;<a href="https://pcpartpicker.com/list/GLR2K4" class="text-primary" target="_blank">https://bit.ly/3iIC5BH</a><br><strong>High-Level</strong>:&nbsp;<a href="https://pcpartpicker.com/list/QztPyk" class="text-primary" target="_blank">https://bit.ly/3iJz4AP</a></p>
+                                        <p class="mbr-text mbr-fonts-style m-0 display-7">Why Custom? <br>* Future Proof<br>* Upgrade-able<br>* Easy to repair<br><br>Links:&nbsp;<br><strong>Entry-Level</strong>:&nbsp;<a href="https://pcpartpicker.com/list/ZDFQCL" class="text-primary" target="_blank">https://bit.ly/33HFpsq</a><br><strong>Mid-Level</strong>:&nbsp;<a href="https://pcpartpicker.com/list/GLR2K4" class="text-primary" target="_blank">https://bit.ly/3iIC5BH</a><br><strong>High-Level</strong>:&nbsp;<a href="https://bit.ly/3mjOH4f" class="text-primary" target="_blank">https://bit.ly/3mjOH4f</a></p>
                                     </div>
                                 </div>
                             </div>
